<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityWebview"
    android:orientation="vertical"
    android:background="@color/material_dynamic_primary20"

    >

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_margin="20dp"
      android:text="WebView"
      android:textColor="@color/white"
      android:textStyle="bold"

      tools:layout_editor_absoluteX="129dp"
      tools:layout_editor_absoluteY="28dp"
      android:gravity="center"
      android:textSize="30dp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:orientation="horizontal"

      android:layout_margin="10dp"

      >

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/teal_200"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="75dp"
        >

      <TextView
          android:id="@+id/toast_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/webtext1"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_margin="5dp"
          android:textSize="11dp"
          android:textColor="@color/black"
          />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="75dp"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/webtext2"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_margin="5dp"
          android:textSize="12dp"
          android:textColor="@color/white"
          />

    </androidx.cardview.widget.CardView>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:orientation="horizontal"
      android:layout_margin="10dp"
      >
    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/teal_700"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="75dp"
        >

      <TextView
          android:id="@+id/text3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/webtext3"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_margin="5dp"
          android:textSize="14dp"
          android:textColor="@color/white"
          />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="75dp"
        >
      <TextView
          android:id="@+id/text4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/webtext4"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_margin="5dp"
          android:textSize="15dp"
          android:textColor="@color/black"
          />
    </androidx.cardview.widget.CardView>

  </LinearLayout>

  <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Opening Leetcode.com in webview"
      android:textColor="@color/white"
      android:textSize="20dp"
      android:layout_margin="20dp"
      android:layout_gravity="center"
      android:gravity="center"
      />

  <Button
      android:id="@+id/btnToLeet"
      android:layout_width="200dp"
      android:layout_height="80dp"
      android:text="Open LeetCode"
      android:layout_margin="30dp"
      android:textColor="@color/black"
      android:background="@color/blue2"
      android:textStyle="bold"

      />

  </LinearLayout>